--- a/views/añadir.html
+++ b/views/añadir.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Añadir</title>
-    <link rel="stylesheet" href="añadir.css">
+    <link rel="stylesheet" href="../css/añadir.css">
 </head>
 <body>
     <div class="flex-conteiner">
-        <img src="./imagenes/Group 7@2x.png" alt="mas" class="mas">
+        <img src="../storage/img/Group 7@2x.png" alt="mas" class="mas">
         <a href="añadir.html" class="Añadir">Añadir</a>
-        <img src="./imagenes/Icon open-reload@2x.png" alt="circul" class="circul">
+        <img src="../storage/img/Icon open-reload@2x.png" alt="circul" class="circul">
         <a href="" class="Añadir">Refrescar</a>
-        <img src="./imagenes/Icon material-delete-forever@2x.png" alt="caneca" class="caneca">
+        <img src="../storage/img/Icon material-delete-forever@2x.png" alt="caneca" class="caneca">
         <a href="eliminar.html" class="Añadir">Eliminar</a>
-        <img src="./imagenes/kario sin kairo@2x.png" alt="logo" class="logo">
-        <img src="./imagenes/Icon material-bug-report@2x.png" alt="report" class="report">
+        <img src="../storage/img/kario sin kairo@2x.png" alt="logo" class="logo">
+        <img src="../storage/img/Icon material-bug-report@2x.png" alt="report" class="report">
         <a href="Repostes.html" class="Añadir">Reportar</a>
-        <img src="./imagenes/Icon ionic-ios-help-circle@2x.png" alt="circle" class="circle">
+        <img src="../storage/img/Icon ionic-ios-help-circle@2x.png" alt="circle" class="circle">
         <a href="ayuda.html" class="Añadir">Ayuda</a>
-        <a href=""><img src="./imagenes/Icon ionic-ios-settings@2x.png" alt="tuerca" class="tuerca"></a>
-        <a href=""><img src="./imagenes/Icon material-notifications-active@2x.png" alt="campana" class="campana"></a>
-        <a href="#cuadroSobrepuesto"><img src="./imagenes/Welcome_to_FigJam__1_-removebg-preview.png" alt="foto" class="foto"></a>
+        <a href=""><img src="../storage/img/Icon ionic-ios-settings@2x.png" alt="tuerca" class="tuerca"></a>
+        <a href=""><img src="../storage/img/Icon material-notifications-active@2x.png" alt="campana" class="campana"></a>
+        <a href="#cuadroSobrepuesto"><img src="../storage/img/Welcome_to_FigJam__1_-removebg-preview.png" alt="foto" class="foto"></a>
     </div>
     <div class="linea"></div>
     <div><p class="indicadores">Panel de Indicadores</p></div>
@@ -63,13 +63,9 @@
         <p class="doce">12/05/21</p>
         <p class="Me">Met.Ágil</p>
         <p class="uncuarto">1/4</p>
-<<<<<<< HEAD:views/añadir.html
-        <img src="./imagenes/Group 12.png" alt="treintauno" class="treintauno1">
-=======
         <div class="progress-bar segundo">
             <progress id="segundo" min="0" max="100" value="25"></progress>
         </div>
->>>>>>> e360b15 (feat :art: estilo dinamico de porcentajes):añadir.html
         <p class="marketing">Diseño</p>
     </div>
     <div class="linea2">
@@ -85,13 +81,9 @@
         <p class="doce1">12/11/21</p>
         <p class="Me1">Met.Fibo</p>
         <p class="uncuarto1">1/4</p>
-<<<<<<< HEAD:views/añadir.html
-        <img src="./imagenes/Group 10.png" alt="treintauno" class="treintauno2">
-=======
         <div class="progress-bar tercero">
             <progress id="tercero" min="0" max="100" value="80"></progress>
         </div>
->>>>>>> e360b15 (feat :art: estilo dinamico de porcentajes):añadir.html
         <p class="marketing1">Developers</p>
     </div>
     <div class="linea3">
@@ -155,10 +147,10 @@
     </div>
     <div id="cuadroSobrepuesto">
         <div id="contenidoCuadro">
-          <img src="./imagenes/Welcome_to_FigJam__1_-removebg-preview.png" alt="logologo" class="logologo">
+          <img src="../storage/img/Welcome_to_FigJam__1_-removebg-preview.png" alt="logologo" class="logologo">
           <p class="usuario">Usuario</p>
-          <img src="./imagenes/icons8-salida-50.png" alt="login" class="login">
-          <a href="Index.html" class="logout">Log-Out</a>
+          <img src="../storage/img/icons8-salida-50.png" alt="login" class="login">
+          <a href="../index.html" class="logout">Log-Out</a>
           <a href="#" id="cerrarCuadro" class="cerrar">Cerrar</a>
         </div>
       </div>
@@ -194,6 +186,6 @@
     <div class="cumplimientome">Cumplimiento</div>
     <div class="ver"><a href="#" class="b">Ver más</a></div>
     <div class="ver1"><a href="#" class="b">Ver más</a></div>
-    <div><a href="menu.html"><img src="./imagenes/kario sin kairo@2x.png" alt="" class="medialogo"></a></div>
+    <div><a href="menu.html"><img src="../storage/img/kario sin kairo@2x.png" alt="" class="medialogo"></a></div>
 </body>
 </html>
